tests/NormalTests/paczka1/fuzzy1/55113373.err
Error in line 3: id8E A762 13,7
Error in line 6: PuzxS33D0F S91 25,9
Error in line 13: S91 S91 23,5
